3rd commit changed title

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "gregorportfolio",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://gregorross.github.io/gregorportfolio",
+  "homepage": "https://GregorRoss.github.io/GregorPortfolio",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
